TEST_PROGRAMS/INVALID/armin_taheri/invalid4.min
# no declaration inside if block 
var x: int; 

x = 1;

if x then
	var y: int;
	y = 40;
endif






